--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@ header {
 .container {
   max-width: 1200px;
   margin: 0 auto;
+  display: block;
+  overflow: hidden;
 }
 .menu {
   display: flex;
@@ -87,13 +89,27 @@ header {
   text-align: center;
 
 }
+.services-img{
+  display: flex;
+  justify-content: space-around;
+
+}
+.s-img img{
+  margin-bottom: 0%;
+  padding-bottom: 0;
+}
+.s-img p{
+  margin-top: 0%;
+  padding-top: 0;
+  margin-bottom: 3rem;
+}
 .my-services h2{
   margin: 0;
   padding: 0;
 
 }
 .my-services .services-img img{
-  padding: 40px 50px;
+  /* padding: 40px 50px; */
 
 }
 
